# sygnal_backend

./: .gitignore  manage.py  pyproject.toml
api/: admin.py
core/: admin.py  discord_bot.py  discord_webhook.py
core/indicators/: __init__.py  custom.py  trend.py  volatility.py
core/management/commands/: fetch_coin_data.py  websockets.py
core/migrations/: 0001_initial.py  0002_coin.py
core/models/: __init__.py  coin.py  user.py
scanner/: discord_webhook.py  scanner.py
sygnal/: asgi.py  settings.py  urls.py  wsgi.py
